package edu.fiuba.algo3.modelo.Cartas;

public interface Canjes {

    int realizarCanje();

    Canjes obtenerProximoCanje();
}
